fix nav on mobile

--- a/source/stylesheets/project.css.scss
+++ b/source/stylesheets/project.css.scss
@@ -28,4 +28,8 @@
   .showcase {
     display: none;
   }
+
+  .projectsDescription {
+    width: 100%;
+  }
 }
